--- a/_config.yml
+++ b/_config.yml
@@ -18,19 +18,19 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: maxvoltar.photo
-email: tim@maxvoltar.be
+title: aditya.photo
+email: 
 author:
-  name: Tim Van Damme
-  email: tim@maxvoltar.be #optional
-  website: https://maxvoltar.com
+  name: aditya
+  email: 
+  website: https://adityag.netlify.app/
 description: >- # this means to ignore newlines until "baseurl:"
-  @maxvoltar's minimalistic, self-hosted photo stream.
+  Forked and deployed from @maxvoltar's Github.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://maxvoltar.photo/" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: maxvoltar
-github_username: maxvoltar
-instagram_username: maxvoltar
+url: "https://adityag.netlify.app/" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: 
+github_username: adityag81
+instagram_username: 
 
 # Build settings
 plugins:
